# NPS-generation

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.txt  environment.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build.yml  dev.yml  docs.yml  release.yml  requirements.txt  tests.yml  tests_no_warnings.yml
NPS_generation/: augment-SMILES.py  augment_SMILES.py  sample_molecules.py  train_model.py
_sources/: index.rst.txt
_sources/clm/: installation.md.txt  workflow.md.txt
_sources/src/: clm.commands.rst.txt  clm.data.rst.txt  clm.plot.rst.txt  clm.rst.txt  clm.util.rst.txt  modules.rst.txt
clm/: __init__.py  __main__.py  faq.html  installation.html  workflow.html  workflow_steps.html
docs/: conf.py  index.rst  modules.rst  refs.bib
docs/clm/: faq.md  (+3 more)
python/: inner-create-training-sets.py  inner-preprocess-and-create-training-sets.py  inner-sample-molecules-RNN.py  inner-train-models-RNN.py  inner-write-formula-prior-CV.py  inner-write-structural-prior-CV.py
scripts/: add_fingerprints.py  topk.py
snakemake/: README.md  Snakefile  Snakefile_model_eval  config.json  config.yaml  config_fast.json  config_fast.yaml
src/: clm.commands.html  clm.data.html  clm.html  clm.plot.html  clm.util.html  modules.html
tests/: conftest.py  test_functions.py  test_model_evaluation.py  test_nps_generation.py  test_snakemake.py  test_snakemake_long.py  test_snakemake_steps.py
workflow/: README.md  Snakefile  Snakefile_data
(+295 files in other folders)
