[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "skinniderlab-clm"
authors = [
  {name="Michael Skinnider", email="skinnider@princeton.edu"}
]
description = "NPS-generation is a tool to train and evaluate deep generative models of novel psychoactive substances"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "deepsmiles",
    "fcd_torch",
    "numpy",
    "pandas",
    "pulp<2.8.0",
    "rdkit",
    "scikit-learn",
    "scipy==1.11.1",
    "selfies",
    "snakemake",
    "torch",
    "tqdm",
    "seaborn",
    "matplotlib"
]
dynamic = ["version"]

[project.scripts]
clm = "clm.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/clm/_version.py"

[tool.setuptools.package-data]
clm = ["data/*.smi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[project.optional-dependencies]
dev = [
    "build",
    "myst-parser",
    "pre-commit",
    "pytest",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_rtd_theme",
    "twine"
]
